--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,11 @@
     <description>Sistema Gerador de Rodizio de Organistas</description>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>24</maven.compiler.release>
     </properties>
 
     <repositories>
